# BoostWebsocketExperimentCPP

./: README.md
Client/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  WebSocketChatAppClient.sln  WebSocketChatAppClient.vcxproj  WebSocketChatAppClient.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  client.cpp  client.hpp  cmake_install.cmake  main.cpp
Client/WebSocketChatAppClient.dir/Debug/: WebSocketChatAppClient.exe.recipe  WebSocketChatAppClient.ilk  vc143.idb
Client/WebSocketChatAppClient.dir/Debug/WebSocke.CD766BA7.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  WebSocketChatAppClient.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Client/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
Client/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
Server/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  WebSocketChatAppServer.sln  WebSocketChatAppServer.vcxproj  WebSocketChatAppServer.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp  server.cpp  server.hpp
Server/WebSocketChatAppServer.dir/Debug/: WebSocketChatAppServer.exe.recipe  WebSocketChatAppServer.ilk  vc143.idb
Server/WebSocketChatAppServer.dir/Debug/WebSocke.62D3A420.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Server/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
Server/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
(+9 files in other folders)
